<resources>
    <string name="app_name">Just Jog</string>
    <string name="statistics">Statistics</string>
    <string name="calendar">Calendar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="today">Just Jog!</string>
    <string name="average_miles_per_week">Average Weekly</string>
    <string name="daily_record">Daily Record</string>
    <string name="start_run">Start Run</string>
    <string name="Stop_run">Stop Run</string>
    <string name="click_to_start_run">Click to Start Run</string>
    <string name="delete_all_entries">Delete All Entries</string>
    <string name="delete">Delete</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="total_distance">Distance:</string>
    <string name="total_time">Duration:</string>
    <string name="number_of_runs">Number Of Runs:</string>
    <string name="jog">Jog #</string>
    <string name="miles_per_hour">Miles Per Hour:</string>
    <string name="map">View In Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="date">Date:</string>
    <string name="jog_id">Jog ID:</string>
    <string name="be_your_own_change">Be your own change!</string>
    <string name="you_ran_today">You ran today!</string>
    <string name="for_1">For</string>
    <string name="mins_at">mins at</string>
    <string name="mph">MPH!</string>
    <string name="miles">Miles</string>
    <string name="runs">Runs</string>


    <!-- Notification Channel -->
    <string name="active_run">Active Run</string>
    <string name="active_run_desc">Notification shown when the user is actively jogging.</string>

    <!-- Notification -->
    <string name="notification_title">Actively Running</string>
    <string name="stop_jog">Stop Jog</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="Sun">Sun</string>
    <string name="average_per_run">Average Per Run:</string>
    <string name="forward_slash">/</string>
    <string name="this_week">This Week:</string>
    <string name="start_time">Start Time:</string>
    <string name="start">Start</string>
    <string name="end">End</string>
</resources>