<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary_background_color"
    android:paddingStart="@dimen/m_horizontal_spacing"
    android:paddingTop="@dimen/m_vertical_spacing"
    android:paddingEnd="@dimen/l_horizontal_spacing"
    android:paddingBottom="@dimen/m_vertical_spacing"
    tools:context=".statistics.view.StatisticsFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/today_run"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginEnd="@dimen/s_horizontal_spacing"
        app:cardCornerRadius="@dimen/xl_corner_radius"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="@dimen/s_horizontal_spacing"
            android:paddingTop="@dimen/s_vertical_spacing"
            android:paddingEnd="@dimen/s_horizontal_spacing"
            android:paddingBottom="@dimen/s_vertical_spacing">

            <TextView
                android:id="@+id/today_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/s_vertical_spacing"
                android:text="@string/today"
                android:textSize="@dimen/m_text_size"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.115"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/today_run_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/s_vertical_spacing"
                android:textColor="@color/primary_text_color"
                android:textSize="@dimen/xl_text_size"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.115"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/today_text_view"
                tools:text="- No Runs!" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    w>

    <androidx.cardview.widget.CardView
        android:id="@+id/weekly_average_card_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/s_vertical_spacing"
        android:layout_marginEnd="@dimen/s_horizontal_spacing"
        android:layout_marginBottom="@dimen/m_vertical_spacing"
        app:cardCornerRadius="@dimen/xl_corner_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/today_run"
        tools:layout_editor_absoluteX="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="@dimen/s_horizontal_spacing"
            android:paddingTop="@dimen/s_vertical_spacing"
            android:paddingEnd="@dimen/s_horizontal_spacing"
            android:paddingBottom="@dimen/s_vertical_spacing">

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/weekly_stats_bar_chart"
                android:layout_width="match_parent"
                android:layout_height="340dp"
                app:layout_constraintBottom_toBottomOf="parent" />

            <TextView
                android:id="@+id/this_weeks_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/s_vertical_spacing"
                android:layout_marginEnd="@dimen/s_horizontal_spacing"
                android:text="@string/this_week"
                android:textSize="@dimen/m_text_size"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/this_weeks_runs_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/s_vertical_spacing"
                android:layout_marginEnd="@dimen/s_horizontal_spacing"
                android:textColor="@color/primary_text_color"
                android:textSize="@dimen/m_text_size"
                app:layout_constraintStart_toStartOf="@id/this_weeks_text_view"
                app:layout_constraintTop_toBottomOf="@id/this_weeks_text_view"
                tools:text="3 Runs" />

            <TextView
                android:id="@+id/this_weeks_miles_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/s_vertical_spacing"
                android:layout_marginEnd="@dimen/s_horizontal_spacing"
                android:textColor="@color/primary_text_color"
                android:textSize="@dimen/m_text_size"
                app:layout_constraintStart_toStartOf="@id/this_weeks_runs_text_view"
                app:layout_constraintTop_toBottomOf="@id/this_weeks_runs_text_view"
                tools:text="6 Miles" />

            <TextView
                android:id="@+id/this_weeks_time_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/s_vertical_spacing"
                android:layout_marginEnd="@dimen/s_horizontal_spacing"
                android:textColor="@color/primary_text_color"
                android:textSize="@dimen/m_text_size"
                app:layout_constraintStart_toStartOf="@id/this_weeks_miles_text_view"
                app:layout_constraintTop_toBottomOf="@id/this_weeks_miles_text_view"
                tools:text="100h 50m 15s" />

            <TextView
                android:id="@+id/average_weekly_run_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/s_horizontal_spacing"
                android:layout_marginTop="@dimen/s_vertical_spacing"
                android:textColor="@color/primary_text_color"
                android:textSize="@dimen/m_text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/average_weekly_text_view"
                tools:text="3 Runs" />

            <TextView
                android:id="@+id/average_weekly_miles_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/s_horizontal_spacing"
                android:layout_marginTop="@dimen/s_vertical_spacing"
                android:textColor="@color/primary_text_color"
                android:textSize="@dimen/m_text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/average_weekly_run_text_view"
                tools:layout_editor_absoluteX="93dp"
                tools:text="6.32 Miles" />

            <TextView
                android:id="@+id/average_weekly_time_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/s_horizontal_spacing"
                android:layout_marginTop="@dimen/s_vertical_spacing"
                android:textColor="@color/primary_text_color"
                android:textSize="@dimen/m_text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/average_weekly_miles_text_view"
                tools:layout_editor_absoluteX="205dp"
                tools:text="4h 50m 32s" />

            <TextView
                android:id="@+id/average_weekly_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/s_horizontal_spacing"
                android:layout_marginTop="@dimen/s_vertical_spacing"
                android:text="@string/average_weekly"
                android:textSize="@dimen/m_text_size"
                android:textStyle="italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/start_stop_floating_action_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primary_background_color"
        android:contentDescription="@string/start_run"
        android:elevation="1dp"
        android:src="@drawable/ic_action_play_arrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>